visualization/app/codeCharta/ui/customConfigs/customConfigList/customConfigItemGroup/customConfigDescription/applyCustomConfigButton.component.scss
cc-apply-custom-config-button {
	display: flex;
	flex: 1;

	button {
		flex-direction: column;
		width: 100%;

		&:disabled {
			cursor: default;
		}

		.config-metric-list {
			display: flex;
			flex-wrap: wrap;
			gap: 10px;
		}

		p {
			white-space: nowrap;
			text-overflow: ellipsis;
			overflow: hidden;
			font-size: 15px;
			margin: 5px 0;
			text-align: left;

			&.config-name {
				flex: 0 0 22em;
			}

			&.config-metric {
				flex: 0 0 8em;
			}
		}

		.color-schema-container {
			display: flex;
			align-items: center;
			gap: 2px;

			.color-swatch-container {
				.color-swatch {
					display: inline-block;
					width: 16px;
					height: 16px;
				}
			}
		}
	}
}

